# langchain-ai-agent

./: .env.example  .gitignore  README.md  example_response.json  pyproject.toml
apps/api/: __main__.py  app.py  config.py
apps/api/routers/: agent.py  health.py
apps/domain/: models.py
apps/domain/agents/: __init__.py  currency_exchange.py
apps/domain/tools/: __init__.py  currency_tool.py
tests/: test_app.py
